# pyproject_template

./: .gitignore  README.md  pyproject.toml
conda.recipe/: meta.yaml
demo_module/: cli.py  test.py
