[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "demo_module"
version = "0.1.0"
description = ""
authors = [
    { name = "author" }
]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
]

[project.scripts]
test_cli = "demo_module.cli:main"

[project.urls]
Repository = "https://github.com/lutrarutra/pyproject_template"
